# code-visualizer-c

./: .clang-format  CMakeLists.txt  LICENSE.txt  Main.cpp  README.md
Examples/: Main.c
Include/: CodeBuilder.h  Core.h  FileTree.h  MarkupTree.h  VisualizerASTConsumer.h  VisualizerAction.h  VisualizerFrontendActionFactory.h  VisualizerVisitor.h
Output/: Output.html
Resources/: Script.js  Skeleton.html  Styles.css  Theme.css
Source/: CodeBuilder.cpp  FileTree.cpp  Main.cpp  MarkupTree.cpp  VisualizerASTConsumer.cpp  VisualizerAction.cpp  VisualizerFrontendActionFactory.cpp  VisualizerVisitor.cpp
Templates/: ResponsePage.html
TestSuite/: Header.h  Large.c  Main.c  Mini.c  Small.c
TestSuite/Folder/: Header.h
TestSuite/Math/: Header.h  Source.c
